--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body{
     color: var(--blanco);
     background-color: var(--gradient);
     width:auto;
-    padding: 1.5rem .5rem;
+    padding: 1.5rem 2rem;
     
 }
 .header__titulo{
