--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 --negro: #000000;
 --gris: #e1e1e1;
 --gris-texto: #a09e9e;
+--gris-parrafo: #837c7c;
 --primario: rgb(197, 199, 63);
 --hover: rgb(209, 212, 20);
 --gradient: rgba(0, 0, 0,0.7);
@@ -233,10 +234,9 @@ body{
 }
 
 /* descripcion del hotel */
-.description__hotel{
+/* .description__hotel{
     padding: 2rem;
-}
-
+} */
 
 .contenedor__description__image{
     margin-bottom: 2rem;
@@ -255,9 +255,9 @@ body{
 }
 
 /* Contenedor rooms */
-.contenedor__rooms{
+/* .contenedor__rooms{
     padding: 2rem;
-}
+} */
 .info__text{
     color: var(--gris-texto);
     font-size: 1.6rem;
@@ -275,6 +275,88 @@ body{
 }
 
 
+/*Seccion de Restaurantes y comidas*/
+
+
+
+/*Seccion de contacto*/
+.contacto {
+    display: grid;
+    column-gap: 2rem;
+}
+.contacto h3{
+    color: var(--gris-texto);
+    font-size: 2rem;
+}
+.contacto__contenido{
+    font-size: 1.6rem;
+    color: var(--gris-parrafo);
+}
+
+@media (min-width: 768px){
+    .contacto {
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem ;
+    }
+}
+.formulario{
+    width: 80%;
+    margin: 0 auto;
+    font-size:1.8rem;
+    color: var(--gris-parrafo);
+}
+@media (min-width: 768px){
+    .formulario{
+        width: 100%;
+    }
+    .formulario__inputs {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+.campo_formulario--textarea {
+    display: block;
+    grid-column: 1 / 3;
+}
+.formulario__inputs label{
+    display:block;
+    margin: 1.5rem 0 .5rem 0;
+}
+.campo_formulario input{
+    display:block;
+    width: 100%;
+}
+
+textarea{
+    
+    display: block;
+    /* width: 92.5%; */
+    /* width: min(93.5%, 100%); */
+    width:100%;
+}
+.boton-enviar {
+    margin-top: 2rem;
+    border: none;
+    cursor: pointer;
+    font-size: 1.4rem;
+    display: block;
+    width: 100%;
+}
+@media (min-width: 768px){
+    .campo_formulario input {
+        width: 80%;
+    }
+    textarea {
+        width: 91%;
+        
+    }
+    .boton-enviar{
+        width: 15rem;
+    }
+}
+
+
+/* Seccion de Footer */
 .footer{
     background-color: var(--negro);
     color: var(--blanco);
