--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ body{
     background-repeat: no-repeat;
 }
 .banner__contenedor__texto {
-    height: 10rem;
+    height: 11rem;
     padding: 2rem;
     position: absolute;
     right: 0;
@@ -197,7 +197,7 @@ body{
     color: var(--blanco);
 }
 .banner__contenedor__texto__title{
-     margin-bottom: 1rem;
+    margin-bottom: 1rem;
      font-size: 1.6rem;
      word-spacing: .2rem;
      text-transform: uppercase;
@@ -314,9 +314,11 @@ body{
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
 .campo_formulario--textarea {
     display: block;
     grid-column: 1 / 3;
+    
 }
 .formulario__inputs label{
     display:block;
@@ -325,15 +327,25 @@ body{
 .campo_formulario input{
     display:block;
     width: 100%;
+    padding: 1rem;
+
 }
 
 textarea{
-    
     display: block;
-    /* width: 92.5%; */
-    /* width: min(93.5%, 100%); */
     width:100%;
+    padding: 2rem 0;
+    resize:vertical;
 }
+
+.campo_formulario input,
+.campo_formulario textarea {
+    border: none;
+    background-color: var(--gris);
+    color: var(--gris-parrafo);
+    outline:none;
+}
+
 .boton-enviar {
     margin-top: 2rem;
     border: none;
