--- a/css/style.css
+++ b/css/style.css
@@ -317,6 +317,7 @@ body{
 
 .campo_formulario--textarea {
     display: block;
+    width: 100%;
     grid-column: 1 / 3;
     
 }
@@ -334,8 +335,8 @@ body{
 textarea{
     display: block;
     width:100%;
-    padding: 2rem 0;
-    resize:vertical;
+    padding:0;
+    resize:none;
 }
 
 .campo_formulario input,
@@ -376,4 +377,21 @@ textarea{
 }
 .footer p{
     font-size: 1.8rem;
+}
+
+
+/* cambiar el estilo del auto completado */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    border:none;
+    -webkit-text-fill-color: var(--gris-texto);
+    transition: background-color 5000s ease-in-out 0s;
+    
 }
